<resources>
    <string name="app_name">Khata Kharch</string>
    <string name="action_settings">Settings</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="titile">Kharch Khata</string>
    <string name="date">Date</string>
    <string name="salary">Salary</string>
    <string name="price">Price</string>
    <string name="price2">Price</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="note">Note</string>
    <string name="save">SAVE</string>
    <string name="enter_id_number">Enter Id Number</string>
</resources>
