<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/add_expense"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/dateSpinnerex"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="@dimen/big_padding"
            android:layout_weight="1"
            android:background="@drawable/spinner_bg"
            android:entries="@array/currency_options"
            android:spinnerMode="dropdown" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exenterAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:layout_weight="1"
            android:hint="@string/amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/exenterAmountedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="5" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addexenterDatelay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:hint="Date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addexdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterCatelay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:hint="@string/category">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exCategoryadd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:drawableStart="@drawable/img_2"
            android:drawablePadding="12dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/exenterNotelay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:hint="@string/note">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="100"
            android:paddingBottom="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ExButton_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/save"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/exEnterId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_id_number"
        android:inputType="number"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        android:visibility="gone" />
</LinearLayout>