<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp">

    <TextView
        android:id="@+id/dateId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rv_item_bg"
        android:paddingVertical="2dp"
        android:paddingStart="10sp"
        android:text="@string/date"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="7dp"
        app:layout_constraintTop_toBottomOf="@+id/dateId"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/img_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/categoryId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/salary"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageview"
            app:layout_constraintTop_toTopOf="@+id/imageview"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/descriptionId"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageview"
            app:layout_constraintTop_toBottomOf="@+id/categoryId"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/priceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/price"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/descriptionId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/mainId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/price2"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_marginTop="8dp"
            android:background="#CCCCCC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
